--- a/registry.yaml
+++ b/registry.yaml
@@ -119,99 +119,6 @@ tools:
             type: array
             description: "Discovered vulnerabilities with CVE references"
 
-  gobuster:
-    name: gobuster
-    version: "3.6"
-    description: "Directory and DNS bruteforcing tool for web enumeration"
-    image: "ghcr.io/silicon-works/mcp-tools-gobuster:latest"
-    image_size_mb: 80
-
-    capabilities:
-      - directory_bruteforce
-      - dns_bruteforce
-      - vhost_discovery
-      - s3_bucket_enumeration
-
-    phases:
-      - enumeration
-
-    requirements:
-      network: true
-      privileged: false
-      privileged_reason: null
-
-    resources:
-      memory_mb: 512
-      cpu: 1.0
-
-    methods:
-      dir_scan:
-        description: "Bruteforce directories and files on a web server"
-        when_to_use: "After discovering HTTP/HTTPS service to find hidden paths"
-        requires_privileged: false
-        params:
-          url:
-            type: string
-            required: true
-            description: "Target URL (e.g., http://target.com)"
-          wordlist:
-            type: string
-            default: "/usr/share/wordlists/dirb/common.txt"
-            description: "Path to wordlist file"
-          extensions:
-            type: string
-            description: "File extensions to search (e.g., 'php,html,txt')"
-          threads:
-            type: integer
-            default: 10
-            description: "Number of concurrent threads"
-          status_codes:
-            type: string
-            default: "200,204,301,302,307,401,403"
-            description: "Status codes to consider as found"
-        returns:
-          paths:
-            type: array
-            description: "Discovered paths with status codes"
-
-      dns_scan:
-        description: "Bruteforce DNS subdomains"
-        when_to_use: "To discover subdomains of a target domain"
-        params:
-          domain:
-            type: string
-            required: true
-            description: "Target domain (e.g., example.com)"
-          wordlist:
-            type: string
-            default: "/usr/share/wordlists/dns/subdomains-top1million-5000.txt"
-            description: "Path to subdomain wordlist"
-          threads:
-            type: integer
-            default: 10
-            description: "Number of concurrent threads"
-        returns:
-          subdomains:
-            type: array
-            description: "Discovered subdomains with IP addresses"
-
-      vhost_scan:
-        description: "Bruteforce virtual hosts"
-        when_to_use: "To discover virtual hosts on a web server"
-        params:
-          url:
-            type: string
-            required: true
-            description: "Target URL"
-          wordlist:
-            type: string
-            required: true
-            description: "Path to vhost wordlist"
-        returns:
-          vhosts:
-            type: array
-            description: "Discovered virtual hosts"
-
   sqlmap:
     name: sqlmap
     version: "1.8"
@@ -419,9 +326,9 @@ tools:
   ffuf:
     name: ffuf
     version: "2.1"
-    description: "Fast web fuzzer for directory discovery and parameter fuzzing"
+    description: "Fast web fuzzer for directory discovery, parameter fuzzing, and vhost enumeration"
     image: "ghcr.io/silicon-works/mcp-tools-ffuf:latest"
-    image_size_mb: 70
+    image_size_mb: 100
 
     capabilities:
       - directory_bruteforce
@@ -434,49 +341,118 @@ tools:
     requirements:
       network: true
       privileged: false
+      privileged_reason: null
 
     resources:
       memory_mb: 512
       cpu: 1.0
 
     methods:
-      fuzz:
-        description: "Fuzz a URL with a wordlist"
-        when_to_use: "Fast alternative to gobuster for directory/parameter fuzzing"
+      dir_fuzz:
+        description: "Fuzz directories and files on a web server"
+        when_to_use: "After discovering HTTP/HTTPS service to find hidden paths and files"
+        requires_privileged: false
         params:
           url:
             type: string
             required: true
-            description: "Target URL with FUZZ keyword for injection point"
+            description: "Target URL (FUZZ keyword added automatically if missing)"
           wordlist:
             type: string
-            required: true
-            description: "Path to wordlist"
-          method:
-            type: enum
-            default: GET
-            values: [GET, POST, PUT, DELETE]
-            description: "HTTP method"
-          headers:
-            type: object
-            description: "Custom HTTP headers"
-          data:
+            default: "common"
+            description: "Wordlist name (common, big, dirbuster-small, dirbuster-medium) or path"
+          extensions:
             type: string
-            description: "POST data (use FUZZ for injection point)"
-          filter_status:
-            type: string
-            description: "Filter by status codes (e.g., '200,301')"
-          filter_size:
-            type: string
-            description: "Filter by response size"
+            description: "File extensions to append (e.g., 'php,html,txt')"
           threads:
             type: integer
             default: 40
             description: "Number of concurrent threads"
+          filter_status:
+            type: string
+            description: "Match these status codes (default: 200,204,301,302,307,401,403,405)"
+          filter_size:
+            type: string
+            description: "Filter out responses of this size"
+          timeout:
+            type: integer
+            default: 10
+            description: "HTTP request timeout in seconds"
         returns:
           results:
             type: array
-            description: "Successful fuzzing hits"
+            description: "Discovered paths with status codes and sizes"
+          summary:
+            type: object
+            description: "Summary with target, wordlist, and found paths"
+
+      param_fuzz:
+        description: "Fuzz GET or POST parameters"
+        when_to_use: "To discover valid parameter values or test for injection points"
+        requires_privileged: false
+        params:
+          url:
+            type: string
+            required: true
+            description: "Target URL with FUZZ keyword in parameter"
+          wordlist:
+            type: string
+            default: "common"
+            description: "Wordlist name or path"
+          method:
+            type: enum
+            default: GET
+            values: [GET, POST]
+            description: "HTTP method"
+          data:
+            type: string
+            description: "POST data with FUZZ keyword (e.g., 'username=admin&password=FUZZ')"
+          threads:
+            type: integer
+            default: 40
+            description: "Number of concurrent threads"
+          filter_status:
+            type: string
+            description: "Match these status codes"
+          filter_size:
+            type: string
+            description: "Filter out responses of this size"
+        returns:
+          results:
+            type: array
+            description: "Matching parameter values with responses"
+
+      vhost_fuzz:
+        description: "Fuzz virtual hosts on a web server"
+        when_to_use: "To discover virtual hosts when targeting an IP with multiple sites"
+        requires_privileged: false
+        params:
+          url:
+            type: string
+            required: true
+            description: "Target URL (IP address or hostname)"
+          domain:
+            type: string
+            required: true
+            description: "Base domain for vhost fuzzing (e.g., 'target.htb')"
+          wordlist:
+            type: string
+            default: "common"
+            description: "Wordlist for subdomain prefixes"
+          threads:
+            type: integer
+            default: 40
+            description: "Number of concurrent threads"
+          filter_size:
+            type: string
+            description: "Filter out default response size"
+        returns:
+          vhosts:
+            type: array
+            description: "Discovered virtual hosts"
+          summary:
+            type: object
+            description: "Summary with target domain and found vhosts"
 
   whatweb:
     name: whatweb
