feat: add curl MCP server and improve existing tools for pentest gaps

--- a/registry.yaml
+++ b/registry.yaml
@@ -3,6 +3,149 @@ updated_at: "2024-12-25T00:00:00Z"
 
 tools:
   # =============================================================================
+  # HTTP / WEB INTERACTION
+  # =============================================================================
+
+  curl:
+    name: curl
+    version: "8.5"
+    description: "HTTP client for web requests, exploit testing, and file downloads"
+    image: "ghcr.io/silicon-works/mcp-tools-curl:latest"
+    image_size_mb: 100
+
+    capabilities:
+      - http_requests
+      - file_download
+      - exploit_testing
+      - api_interaction
+
+    phases:
+      - reconnaissance
+      - enumeration
+      - exploitation
+
+    requirements:
+      network: true
+      privileged: false
+
+    resources:
+      memory_mb: 128
+      cpu: 0.25
+
+    methods:
+      request:
+        description: "Make an HTTP request to a URL"
+        when_to_use: "For manual HTTP requests, exploit payloads, or API interactions"
+        params:
+          url:
+            type: string
+            required: true
+            description: "Target URL"
+          method:
+            type: enum
+            values: [GET, POST, PUT, DELETE, HEAD, OPTIONS, PATCH]
+            default: GET
+            description: "HTTP method"
+          headers:
+            type: object
+            description: "Custom headers as key-value pairs"
+          data:
+            type: string
+            description: "Request body data"
+          follow_redirects:
+            type: boolean
+            default: true
+            description: "Follow HTTP redirects"
+          timeout:
+            type: integer
+            default: 30
+            description: "Request timeout in seconds"
+          insecure:
+            type: boolean
+            default: false
+            description: "Skip SSL certificate verification"
+          user_agent:
+            type: string
+            description: "Custom User-Agent header"
+          cookie:
+            type: string
+            description: "Cookie header value"
+          auth:
+            type: string
+            description: "Basic auth in user:password format"
+        returns:
+          status_code:
+            type: integer
+            description: "HTTP response status code"
+          headers:
+            type: object
+            description: "Response headers"
+          body:
+            type: string
+            description: "Response body"
+
+      download:
+        description: "Download a file from a URL"
+        when_to_use: "To download exploits, tools, or files for analysis"
+        params:
+          url:
+            type: string
+            required: true
+            description: "URL to download from"
+          timeout:
+            type: integer
+            default: 120
+            description: "Download timeout in seconds"
+          insecure:
+            type: boolean
+            default: false
+            description: "Skip SSL certificate verification"
+        returns:
+          filename:
+            type: string
+            description: "Extracted filename"
+          size_bytes:
+            type: integer
+            description: "File size in bytes"
+          content_base64:
+            type: string
+            description: "File contents as base64"
+
+  playwright-mcp:
+    name: playwright-mcp
+    version: "latest"
+    description: "Browser automation for complex web interactions (Microsoft maintained)"
+    source: "https://github.com/microsoft/playwright-mcp"
+    external: true
+    image: "mcr.microsoft.com/playwright-mcp:latest"
+    image_size_mb: 1500
+
+    capabilities:
+      - browser_automation
+      - javascript_execution
+      - screenshot_capture
+      - form_interaction
+      - spa_testing
+
+    phases:
+      - reconnaissance
+      - enumeration
+      - exploitation
+
+    requirements:
+      network: true
+      privileged: false
+
+    resources:
+      memory_mb: 2048
+      cpu: 2.0
+
+    notes: |
+      External MCP server maintained by Microsoft.
+      Install: npx @anthropic-ai/create-mcp-server@latest --template playwright
+      See: https://github.com/microsoft/playwright-mcp
+
+  # =============================================================================
   # RECONNAISSANCE
   # =============================================================================
 
